# packages/openapi-spec/openapi.yaml
@@ -133,6 +133,46 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ServerErrorResponse"
+  /api/auth/logout:
+    post:
+      summary: 退出登录
+      description: 传入 REFRESH_TOKEN 来退出登录。可以通过请求体传递 refresh_token，或在 Cookie 中携带名为
+        REFRESH_TOKEN 的令牌。
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LogoutUser"
+      responses:
+        "200":
+          description: 退出登录成功
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LogoutSuccessResponse"
+        "400":
+          description: 请求参数错误或刷新令牌无效
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: "#/components/schemas/ValidationErrorResponse"
+                  - $ref: "#/components/schemas/InvalidCredentialsErrorResponse"
+        "429":
+          description: 请求过于频繁
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RateLimitErrorResponse"
+        "500":
+          description: 服务器内部错误
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServerErrorResponse"
   /api/auth/password/change:
     post:
       summary: 修改密码
@@ -662,6 +702,12 @@ components:
         - new_password
         - captcha_token
       additionalProperties: false
+    LogoutUser:
+      type: object
+      properties:
+        refresh_token:
+          type: string
+      additionalProperties: false
     RegisterSuccessResponse:
       type: object
       properties:
@@ -1048,6 +1094,33 @@ components:
         - requestId
         - data
         - error
+      additionalProperties: false
+    LogoutSuccessResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          enum:
+            - true
+        message:
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+          pattern: ^(?:(?:\d\d[2468][048]|\d\d[13579][26]|\d\d0[48]|[02468][048]00|[13579][26]00)-02-29|\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\d|30)|(?:02)-(?:0[1-9]|1\d|2[0-8])))T(?:(?:[01]\d|2[0-3]):[0-5]\d(?::[0-5]\d(?:\.\d+)?)?(?:Z))$
+        requestId:
+          type: string
+        data:
+          type: string
+          nullable: true
+          enum:
+            - null
+      required:
+        - success
+        - message
+        - timestamp
+        - requestId
+        - data
       additionalProperties: false
     EmailVerifySuccessResponse:
       type: object
